Atualização completa do projeto